--- a/styles/globals.css
+++ b/styles/globals.css
@@ -83,3 +83,71 @@ ol li {
     list-style: decimal;
     margin: 0 0 0 16px;
 }
+
+/* Blockquote header */
+blockquote p {
+    font-family: 'Abril Fatface', cursive;
+    position: relative; /* for pseudos */
+    color: #aaa;
+    font-size: 2.8rem;
+    font-weight: normal;
+    line-height: 1;
+    margin: 0;
+    border: 2px solid #fff;
+    border: solid 2px;
+    border-radius:20px;
+    padding: 25px;
+}
+
+/* Blockquote right double quotes */
+blockquote p:after {
+    content: "";
+    position: absolute;
+    border: 2px solid #e74848;
+    border-radius: 153px 123px 102px 231px;
+    width: 200px;
+    height: 28px;
+    bottom: -26px;
+    color: black;
+    left: 48px;
+    z-index: 3;
+}
+
+blockquote p:before {
+    content:"";
+    position: absolute;
+    width: 194px;
+    border: 6px solid #fff;
+    bottom: -3px;
+    left: 50px;
+    z-index: 2;
+}
+
+/* increase header size after 600px */
+@media all and (min-width: 600px) {
+    .blockquote p {
+        font-size: 3rem;
+        line-height: 1.2;
+   }
+
+}
+
+/* Blockquote subheader */
+blockquote p {
+    position: relative;
+    color: black;
+    border: 2px solid #e74848;
+    font-size: 1.3rem;
+    font-weight: 400;
+    line-height: 1.2;
+    margin: 0;
+    padding-top: 15px;
+    z-index: 1;
+    margin-left:50px;
+    padding-left:12px;
+}
+
+ 
+blockquote p:first-letter {
+  margin-left:-12px;
+}
