update text editor

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -57,6 +57,7 @@ h6 {
 /* */
 .ck.ck-content.ck-editor__editable.ck-rounded-corners.ck-editor__editable_inline {
     height: 400px;
+    color:black;
 }
 .css-13cymwt-control {
     padding: 6px 3px;
